# HMWrapper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: examples.md  getting-started.md  index.md
docs/api-reference/: admin.md  bookings.md  client.md  customers.md  exceptions.md  models.md  rooms.md  scheduler.md
docs/hallmaster-api/: admin-endpoints.md  authentication.md  bookings-endpoints.md  customers-endpoints.md  overview.md  rate-limiting.md  rooms-endpoints.md  scheduler-endpoints.md
examples/: create_booking.py  export_calendar.py  list_bookings.py
src/hmwrapper/: __init__.py  admin.py  bookings.py  cli.py  client.py  customers.py  exceptions.py  models.py  rooms.py  scheduler.py
tests/: conftest.py  test_bookings.py  test_cli.py  test_client.py  test_models.py
