[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmwrapper"
dynamic = ["version"]
description = "Python client for the HallMaster venue booking API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "James Burke" }]
keywords = ["hallmaster", "venue", "booking", "api", "hall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
dev = ["pytest", "pytest-cov", "responses", "ruff"]

[project.scripts]
hmwrapper = "hmwrapper.cli:main"

[project.urls]
Homepage = "https://github.com/jameswburke87/HMWrapper"
Documentation = "https://github.com/jameswburke87/HMWrapper"
Repository = "https://github.com/jameswburke87/HMWrapper"

[tool.hatch.version]
path = "src/hmwrapper/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hmwrapper"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
